# InstinctMJ

./: AGENTS.md  CONTRIBUTING.md  MUJOCO_LOG.TXT  README.md  pyproject.toml
docs/skills/: raycaster_depth_migration.md
mkygogo/: train_parkour.sh
scripts/: setup_env.sh
src/instinct_mj/envs/: manager_based_rl_env.py
src/instinct_mj/scripts/instinct_rl/: play.py  train.py
src/instinct_mj/sensors/grouped_ray_caster/: grouped_ray_caster.py
src/instinct_mj/tasks/parkour/: README.md
src/instinct_mj/tasks/shadowing/: README.md
src/instinct_mj/terrains/: terrain_generator.py  terrain_importer.py
src/instinct_mjlab/: __init__.py  ui_extension_example.py
src/instinct_mjlab/actuators/: actuator_cfg.py  actuator_pd.py
src/instinct_mjlab/assets/: unitree_g1.py
src/instinct_mjlab/envs/: __init__.py  manager_based_rl_env.py  manager_based_rl_env_cfg.py
src/instinct_mjlab/envs/mdp/: __init__.py
src/instinct_mjlab/envs/ui/: manager_based_rl_env_window.py
src/instinct_mjlab/managers/: __init__.py  manager_term_cfg.py  reward_manager.py
src/instinct_mjlab/monitors/: monitor_cfg.py  monitor_manager.py  monitors.py
src/instinct_mjlab/motion_reference/: __init__.py  motion_buffer.py  motion_reference_cfg.py  motion_reference_data.py  motion_reference_manager.py  utils.py
src/instinct_mjlab/motion_reference/motion_files/: aistpp_motion.py  aistpp_motion_cfg.py  amass_motion.py  amass_motion_cfg.py  emberUcb.py  emberUcb_cfg.py  terrain_motion.py  terrain_motion_cfg.py
src/instinct_mjlab/motion_reference/motion_generators/: stay_still.py  stay_still_cfg.py
src/instinct_mjlab/rl/: __init__.py  config.py  vecenv_wrapper.py
src/instinct_mjlab/scripts/: __init__.py  _utils.py  depth_probe.py  list_envs.py  perceptive_p0_1_7.py  play.py  train.py
src/instinct_mjlab/scripts/instinct_rl/: play.py
src/instinct_mjlab/sensors/grouped_ray_caster/: __init__.py  grouped_ray_caster.py  grouped_ray_caster_camera.py  grouped_ray_caster_camera_cfg.py  grouped_ray_caster_cfg.py
src/instinct_mjlab/sensors/noisy_camera/: __init__.py  noisy_camera.py  noisy_camera_cfg.py  noisy_grouped_raycaster_camera.py  noisy_grouped_raycaster_camera_cfg.py  noisy_raycaster_camera.py  noisy_raycaster_camera_cfg.py  noisy_tiled_camera.py
src/instinct_mjlab/sensors/volume_points/: points_generator_cfg.py  volume_points.py  volume_points_cfg.py  volume_points_data.py
src/instinct_mjlab/tasks/: registry.py
src/instinct_mjlab/tasks/config/: __init__.py  rl_utils.py
src/instinct_mjlab/tasks/locomotion/: __init__.py
src/instinct_mjlab/terrains/: terrain_generator.py  terrain_generator_cfg.py  terrain_importer.py  terrain_importer_cfg.py
src/instinct_mjlab/utils/: datasets.py  deepcopy_compat.py  humanoid_fk.py  humanoid_ik.py  math.py  motion_validation.py  prims.py  retarget_smpl_to_joint.py  timestamped_buffer.py
tests/: test_configstyle_guard.py  test_parkour_command_cfg.py  test_parkour_terrain_cfg.py  test_virtual_obstacle_smoke.py
(+120 files in other folders)
